@@ -1616,10 +1616,8 @@ ValueImp *getDOMDocumentNode(ExecState *exec, DocumentImpl *n)
 
   // Make sure the document is kept around by the window object, and works right with the
   // back/forward cache.
-  if (n->view()) {
-    static Identifier documentIdentifier("document");
-    Window::retrieveWindow(n->view()->part())->putDirect(documentIdentifier, ret, DontDelete|ReadOnly);
-  }
+  if (n->view())
+    Window::retrieveWindow(n->view()->part())->putDirect("document", ret, DontDelete|ReadOnly);
 
   interp->putDOMObject(n, ret);
 
